# purgatory

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-report.yml  evasion-report.yml  pattern-request.yml
docs/: PRODUCT-SPEC.md
examples/: sample-report.md
purgatory/: __init__.py  __main__.py  cli.py  report.py  scoring.py
purgatory/layers/: __init__.py  prompt_review.py  static.py
tests/: test_purgatory.py
tests/fixtures/borderline-skill/: SKILL.md
tests/fixtures/borderline-skill/scripts/: fetch.py
tests/fixtures/clean-skill/: SKILL.md
tests/fixtures/clean-skill/scripts/: format.py
tests/fixtures/malicious-skill/: SKILL.md
tests/fixtures/malicious-skill/scripts/: setup.sh
