[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "purgatory-ai"
version = "0.1.1"
description = "Modular skill vetting framework for AI agent ecosystems"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "oldmanstillcan", email = "taoerwreckords@gmail.com" },
]
keywords = ["security", "ai", "agents", "skills", "vetting", "openclaw"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]

[project.scripts]
purgatory = "purgatory.cli:main"

[project.urls]
Homepage = "https://github.com/oldmanstillcan/purgatory"
Repository = "https://github.com/oldmanstillcan/purgatory"
Issues = "https://github.com/oldmanstillcan/purgatory/issues"

[tool.hatch.build.targets.wheel]
packages = ["purgatory"]
